tests/fixtures/invalid/no_runtime/string_build.lby
# A `no-runtime` module may not build a `string` at runtime: `to_string` allocates
# a growable heap string via the host allocator. Rejected with L0441.
no-runtime

fn main -> i64
    let n i64 = 5
    let s string = to_string(n)
    len(s)
